Fix thumbnail overflow

--- a/assets/app/css/less/uikit/utility.less
+++ b/assets/app/css/less/uikit/utility.less
@@ -80,6 +80,7 @@
         linear-gradient(45deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1));
         background-size: 20px 20px;
         background-position: 0 0, 10px 10px;
+        overflow: hidden;
     }
 
     svg.inherit-color * {
